# Real-Time-Voxel-Path-Tracer

./: CMakeLists.txt  LICENSE  README.md  Untitled.gltf  build.sh  gltf-builder.py
include/: Camera.h  GltfLoader.h  HitRecord.h  Hittable.h  Image.h  Material.h  Plane.h  Ray.h  RayInteraction.h  Renderer.h  Scene.h  Triangle.h  utils.h
include/glad/: glad.h
scene/: scene.gltf
src/: Camera.cpp  HitRecord.cpp  Image.cpp  Material.cpp  Plane.cpp  Ray.cpp  RayInteraction.cpp  Renderer.cpp  Scene.cpp  Triangle.cpp  glad.c  main.cpp  utils.cpp
